# FORGE-Data

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  generate_dataset.py  test_agent_hil.py  test_creation.py  test_kernel.py  tmpclaude-9705-cwd
forge-data/apps/api/: Dockerfile  alembic.ini  celerybeat-schedule  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_agent_hil.py  test_ai_features.py
forge-data/apps/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py
forge-data/apps/api/app/core/: code_generator.py  data_quality.py  data_versioning.py  exceptions.py  experiment_tracker.py  forge_helpers.py  kernel_manager.py  lineage_tracker.py  llm_provider.py  llm_providers.json  middleware.py  pii_detector.py  pipeline_engine.py  query_engine.py  realtime.py  redis.py  security.py  semantic_layer.py  stat_advisor.py  workflow_engine.py  workflow_templates.py  ws.py
forge-data/apps/api/app/models/: __init__.py  audit_log.py  cell.py  data_quality.py  dataset.py  dataset_version.py  experiment.py  metric.py  pipeline.py  user.py  workflow.py  workspace.py
forge-data/apps/api/app/routers/: __init__.py  ai.py  audit.py  auth.py  cells.py  comments.py  connectors.py  datasets.py  execute.py  experiments.py  health.py  lineage.py  setup.py  users.py  workflows.py  workspaces.py
forge-data/apps/api/migrations/: env.py
forge-data/apps/api/routers/: __init__.py  auth.py  connectors.py  llm.py
forge-data/apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_workflows.py  test_workspaces.py
(+250 files in other folders)
